Safe commit: exclude sensitive ERPNext files

--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,14 @@
-# Ignore Python caches
-__pycache__/
-*.pyc
-
-# Ignore database and local config
+# Ignore sensitive and runtime files
 site_config.json
-db_name.*
-*.db
-
-# Ignore backups and logs
-private/backups/
-logs/
-
-# Ignore node and js build artifacts (if any)
-node_modules/
-*.log
-
-# Ignore assets (they can be regenerated)
-public/assets/
-public/files/
-public/.DS_Store
-
-# Ignore virtual environments
-env/
-venv/
-
-# OS/Editor files
-.DS_Store
-*.swp
-*.swo
-.idea/
-.vscode/
-
-# Ignore auto-generated bench files
-indexes/
+private/
+public/
+backups/
 locks/
+*.pyc
+__pycache__/
+*.log
+*.db
+node_modules/
 touched_tables.json
+indexes/
+env/
